SQ Build app and configure CI

--- a/src/components/ImageWrap/ImageWrap.scss
+++ b/src/components/ImageWrap/ImageWrap.scss
@@ -1,15 +1,3 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
-
-.app {
-  display: flex;
-  flex-direction: column;
-}
-
 .image-wrap {
   width: 512px;
   height: 512px;
@@ -20,4 +8,12 @@
   border: 2px solid #171717;
   background-color: #0f0f0f;
   margin-bottom: 1em;
+
+  &__image {
+    display: none;
+
+    &--loaded {
+      display: block;
+    }
+  }
 }
